--- a/meta-example.html
+++ b/meta-example.html
@@ -19,6 +19,10 @@
     <h1>Meta examples</h1>
 
     <p>Japanese example: ご飯が熱い。</p>
+    <ul>
+      <li> first thing</li>
+      <li>Second thing</li>
+    </ul>
     <script src="script.js"></script>
   </body>
 </html>
